0024283: STEP read failes to read unbound advanced_face

Fix to avoid exception if sphere is written without bounds.